--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -16,7 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy and pandas\n"
+    "# import numpy and pandas\n",
+    "import pandas as pd\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,11 +50,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Job Titles</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Full or Part-Time</th>\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Typical Hours</th>\n",
+       "      <th>Annual Salary</th>\n",
+       "      <th>Hourly Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AARON,  JEFFERY M</td>\n",
+       "      <td>SERGEANT</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101442.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AARON,  KARINA</td>\n",
+       "      <td>POLICE OFFICER (ASSIGNED AS DETECTIVE)</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94122.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AARON,  KIMBERLEI R</td>\n",
+       "      <td>CHIEF CONTRACT EXPEDITER</td>\n",
+       "      <td>GENERAL SERVICES</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101592.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABAD JR,  VICENTE M</td>\n",
+       "      <td>CIVIL ENGINEER IV</td>\n",
+       "      <td>WATER MGMNT</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>110064.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ABASCAL,  REECE E</td>\n",
+       "      <td>TRAFFIC CONTROL AIDE-HOURLY</td>\n",
+       "      <td>OEMC</td>\n",
+       "      <td>P</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Name                              Job Titles  \\\n",
+       "0    AARON,  JEFFERY M                                SERGEANT   \n",
+       "1      AARON,  KARINA   POLICE OFFICER (ASSIGNED AS DETECTIVE)   \n",
+       "2  AARON,  KIMBERLEI R                CHIEF CONTRACT EXPEDITER   \n",
+       "3  ABAD JR,  VICENTE M                       CIVIL ENGINEER IV   \n",
+       "4    ABASCAL,  REECE E             TRAFFIC CONTROL AIDE-HOURLY   \n",
+       "\n",
+       "         Department Full or Part-Time Salary or Hourly  Typical Hours  \\\n",
+       "0            POLICE                 F           Salary            NaN   \n",
+       "1            POLICE                 F           Salary            NaN   \n",
+       "2  GENERAL SERVICES                 F           Salary            NaN   \n",
+       "3       WATER MGMNT                 F           Salary            NaN   \n",
+       "4              OEMC                 P           Hourly           20.0   \n",
+       "\n",
+       "   Annual Salary  Hourly Rate  \n",
+       "0       101442.0          NaN  \n",
+       "1        94122.0          NaN  \n",
+       "2       101592.0          NaN  \n",
+       "3       110064.0          NaN  \n",
+       "4            NaN        19.86  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "salaries.head()\n",
+    "\n"
    ]
   },
   {
@@ -64,11 +187,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(33183, 8)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Name                     0\n",
+       "Job Titles               0\n",
+       "Department               0\n",
+       "Full or Part-Time        0\n",
+       "Salary or Hourly         0\n",
+       "Typical Hours        25161\n",
+       "Annual Salary         8022\n",
+       "Hourly Rate          25161\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "print(salaries.shape)\n",
+    "salaries.isnull().sum()"
    ]
   },
   {
@@ -80,12 +231,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Job Titles</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Full or Part-Time</th>\n",
+       "      <th>Typical Hours</th>\n",
+       "      <th>Annual Salary</th>\n",
+       "      <th>Hourly Rate</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Hourly</th>\n",
+       "      <td>8022</td>\n",
+       "      <td>8022</td>\n",
+       "      <td>8022</td>\n",
+       "      <td>8022</td>\n",
+       "      <td>8022</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Salary</th>\n",
+       "      <td>25161</td>\n",
+       "      <td>25161</td>\n",
+       "      <td>25161</td>\n",
+       "      <td>25161</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25161</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Name  Job Titles  Department  Full or Part-Time  \\\n",
+       "Salary or Hourly                                                     \n",
+       "Hourly             8022        8022        8022               8022   \n",
+       "Salary            25161       25161       25161              25161   \n",
+       "\n",
+       "                  Typical Hours  Annual Salary  Hourly Rate  \n",
+       "Salary or Hourly                                             \n",
+       "Hourly                     8022              0         8022  \n",
+       "Salary                        0          25161            0  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "salaries.groupby(\"Salary or Hourly\").count()"
    ]
   },
   {
@@ -104,11 +337,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Department\n",
+       "ADMIN HEARNG                39\n",
+       "ANIMAL CONTRL               81\n",
+       "AVIATION                  1629\n",
+       "BOARD OF ELECTION          107\n",
+       "BOARD OF ETHICS              8\n",
+       "BUDGET & MGMT               46\n",
+       "BUILDINGS                  269\n",
+       "BUSINESS AFFAIRS           171\n",
+       "CITY CLERK                  84\n",
+       "CITY COUNCIL               411\n",
+       "COMMUNITY DEVELOPMENT      207\n",
+       "COPA                       116\n",
+       "CULTURAL AFFAIRS            65\n",
+       "DISABILITIES                28\n",
+       "DoIT                        99\n",
+       "FAMILY & SUPPORT           615\n",
+       "FINANCE                    560\n",
+       "FIRE                      4641\n",
+       "GENERAL SERVICES           980\n",
+       "HEALTH                     488\n",
+       "HUMAN RELATIONS             16\n",
+       "HUMAN RESOURCES             79\n",
+       "INSPECTOR GEN               87\n",
+       "LAW                        407\n",
+       "LICENSE APPL COMM            1\n",
+       "MAYOR'S OFFICE              85\n",
+       "OEMC                      2102\n",
+       "POLICE                   13414\n",
+       "POLICE BOARD                 2\n",
+       "PROCUREMENT                 92\n",
+       "PUBLIC LIBRARY            1015\n",
+       "STREETS & SAN             2198\n",
+       "TRANSPORTN                1140\n",
+       "TREASURER                   22\n",
+       "WATER MGMNT               1879\n",
+       "Name: Name, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "salaries.groupby(\"Department\").count()[\"Name\"]"
    ]
   },
   {
@@ -122,11 +403,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.3230240486229894e-92"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "from scipy.stats import ttest_1samp\n",
+    "hour_sal=np.array(salaries[salaries[\"Salary or Hourly\"]==\"Hourly\"][\"Hourly Rate\"])\n",
+    "hour_sal\n",
+    "ttest_1samp(hour_sal,30).pvalue\n",
+    "#umbral 0.05>p_value rechazo Ho"
    ]
   },
   {
@@ -140,11 +437,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0010301701775482569"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "police_dep=np.array(salaries[salaries[\"Department\"]==\"POLICE\"][\"Annual Salary\"].dropna())\n",
+    "ttest_1samp(police_dep,86000).pvalue/2\n",
+    "#umbral 0.05>p_value/2 -> rechazo Ho"
    ]
   },
   {
@@ -156,11 +467,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Hourly</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Department</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>STREETS &amp; SAN</th>\n",
+       "      <td>1862</td>\n",
+       "      <td>336</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Salary or Hourly  Hourly  Salary\n",
+       "Department                      \n",
+       "STREETS & SAN       1862     336"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "H_S_dep=pd.crosstab(salaries[\"Department\"], salaries[\"Salary or Hourly\"])\n",
+    "H_S_dep[H_S_dep[\"Hourly\"]==H_S_dep[\"Hourly\"].max()]"
    ]
   },
   {
@@ -172,11 +536,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33.72837808807734\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3.3378530564707717e-21"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "st_san_hw=salaries[(salaries[\"Salary or Hourly\"]==\"Hourly\") & (salaries[\"Department\"]==\"STREETS & SAN\")][\"Hourly Rate\"]\n",
+    "print(st_san_hw.mean())\n",
+    "st_san_hw=np.array(st_san_hw)\n",
+    "ttest_1samp(st_san_hw,35).pvalue/2\n",
+    "#p_value< 0.05 ->rechazo Ho"
    ]
   },
   {
@@ -200,11 +587,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32.52345834488425, 33.05365708767623)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "from scipy.stats import t,sem\n",
+    "h_r=salaries[salaries[\"Salary or Hourly\"]==\"Hourly\"][\"Hourly Rate\"]\n",
+    "s=sem(np.array(h_r))\n",
+    "df=h_r.count()-1\n",
+    "t.interval(0.95,df,h_r.mean(),s)\n"
    ]
   },
   {
@@ -216,11 +619,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(86526.99656774187, 87047.00301256099)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "a_s=salaries[salaries[\"Salary or Hourly\"]==\"Salary\"][\"Annual Salary\"]\n",
+    "s=sem(np.array(a_s))\n",
+    "df=a_s.count()-1\n",
+    "t.interval(0.95,df,a_s.mean(),s)"
    ]
   },
   {
@@ -238,12 +656,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-3.5099964213703005, 0.0004481127249057967)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here:\n",
+    "from statsmodels.stats.proportion import proportions_ztest\n",
+    "s_or_h=salaries.groupby(\"Salary or Hourly\").count()[\"Name\"]\n",
+    "tot=s_or_h.sum()\n",
+    "sal=s_or_h.loc[\"Salary\"]\n",
+    "hourly=s_or_h.loc[\"Hourly\"]\n",
+    "proportions_ztest(hourly,tot,0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -262,7 +704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
