--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -16,7 +16,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy and pandas\n"
+    "# import numpy and pandas\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -30,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,11 +51,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Job Titles</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Full or Part-Time</th>\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Typical Hours</th>\n",
+       "      <th>Annual Salary</th>\n",
+       "      <th>Hourly Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AARON,  JEFFERY M</td>\n",
+       "      <td>SERGEANT</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101442.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AARON,  KARINA</td>\n",
+       "      <td>POLICE OFFICER (ASSIGNED AS DETECTIVE)</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94122.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AARON,  KIMBERLEI R</td>\n",
+       "      <td>CHIEF CONTRACT EXPEDITER</td>\n",
+       "      <td>GENERAL SERVICES</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101592.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABAD JR,  VICENTE M</td>\n",
+       "      <td>CIVIL ENGINEER IV</td>\n",
+       "      <td>WATER MGMNT</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>110064.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ABASCAL,  REECE E</td>\n",
+       "      <td>TRAFFIC CONTROL AIDE-HOURLY</td>\n",
+       "      <td>OEMC</td>\n",
+       "      <td>P</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Name                              Job Titles  \\\n",
+       "0    AARON,  JEFFERY M                                SERGEANT   \n",
+       "1      AARON,  KARINA   POLICE OFFICER (ASSIGNED AS DETECTIVE)   \n",
+       "2  AARON,  KIMBERLEI R                CHIEF CONTRACT EXPEDITER   \n",
+       "3  ABAD JR,  VICENTE M                       CIVIL ENGINEER IV   \n",
+       "4    ABASCAL,  REECE E             TRAFFIC CONTROL AIDE-HOURLY   \n",
+       "\n",
+       "         Department Full or Part-Time Salary or Hourly  Typical Hours  \\\n",
+       "0            POLICE                 F           Salary            NaN   \n",
+       "1            POLICE                 F           Salary            NaN   \n",
+       "2  GENERAL SERVICES                 F           Salary            NaN   \n",
+       "3       WATER MGMNT                 F           Salary            NaN   \n",
+       "4              OEMC                 P           Hourly           20.0   \n",
+       "\n",
+       "   Annual Salary  Hourly Rate  \n",
+       "0       101442.0          NaN  \n",
+       "1        94122.0          NaN  \n",
+       "2       101592.0          NaN  \n",
+       "3       110064.0          NaN  \n",
+       "4            NaN        19.86  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "salaries.head()"
    ]
   },
   {
@@ -64,11 +188,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Typical Hours    25161\n",
+       "Annual Salary     8022\n",
+       "Hourly Rate      25161\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "null_cols = salaries.isnull().sum()\n",
+    "null_cols[null_cols > 0]"
    ]
   },
   {
@@ -80,12 +220,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Salary    25161\n",
+       "Hourly     8022\n",
+       "Name: Salary or Hourly, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "salaries[\"Salary or Hourly\"].value_counts()\n"
    ]
   },
   {
@@ -104,11 +258,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "POLICE                   13414\n",
+       "FIRE                      4641\n",
+       "STREETS & SAN             2198\n",
+       "OEMC                      2102\n",
+       "WATER MGMNT               1879\n",
+       "AVIATION                  1629\n",
+       "TRANSPORTN                1140\n",
+       "PUBLIC LIBRARY            1015\n",
+       "GENERAL SERVICES           980\n",
+       "FAMILY & SUPPORT           615\n",
+       "FINANCE                    560\n",
+       "HEALTH                     488\n",
+       "CITY COUNCIL               411\n",
+       "LAW                        407\n",
+       "BUILDINGS                  269\n",
+       "COMMUNITY DEVELOPMENT      207\n",
+       "BUSINESS AFFAIRS           171\n",
+       "COPA                       116\n",
+       "BOARD OF ELECTION          107\n",
+       "DoIT                        99\n",
+       "PROCUREMENT                 92\n",
+       "INSPECTOR GEN               87\n",
+       "MAYOR'S OFFICE              85\n",
+       "CITY CLERK                  84\n",
+       "ANIMAL CONTRL               81\n",
+       "HUMAN RESOURCES             79\n",
+       "CULTURAL AFFAIRS            65\n",
+       "BUDGET & MGMT               46\n",
+       "ADMIN HEARNG                39\n",
+       "DISABILITIES                28\n",
+       "TREASURER                   22\n",
+       "HUMAN RELATIONS             16\n",
+       "BOARD OF ETHICS              8\n",
+       "POLICE BOARD                 2\n",
+       "LICENSE APPL COMM            1\n",
+       "Name: Department, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "salaries[\"Department\"].value_counts()\n"
    ]
   },
   {
@@ -122,11 +324,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=20.619805785494147, pvalue=4.323024048614701e-92)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "from scipy.stats import ttest_1samp\n",
+    "\n",
+    "ttest_1samp(salaries[\"Hourly Rate\"], 30.00, nan_policy=\"omit\")\n",
+    "\n",
+    "# probability is much less than 0.05, so null hypothesis is rejected."
    ]
   },
   {
@@ -140,11 +359,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=3.081997005712994, pvalue=0.00206034035510054)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "ttest_1samp(salaries[salaries[\"Department\"]==\"POLICE\"][\"Annual Salary\"], 86000.0, nan_policy=\"omit\")\n",
+    "\n",
+    "# probability is less than 0.05, so null hypothesis is rejected."
    ]
   },
   {
@@ -156,11 +390,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>col_0</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Department</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>STREETS &amp; SAN</th>\n",
+       "      <td>1862</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "col_0          count\n",
+       "Department          \n",
+       "STREETS & SAN   1862"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "pd.crosstab(index = salaries[salaries[\"Salary or Hourly\"]==\"Hourly\"][\"Department\"], columns=\"count\")\\\n",
+    ".sort_values(\"count\", ascending = False).head(1)"
    ]
   },
   {
@@ -172,11 +456,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=-9.567447887848152, pvalue=3.3378530564710738e-21)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "ttest_1samp(salaries[salaries[\"Department\"]==\"STREETS & SAN\"][\"Hourly Rate\"], 35.0, nan_policy=\"omit\")\n",
+    "\n",
+    "# probability is much less than 0.05, so null hypothesis is rejected."
    ]
   },
   {
@@ -200,11 +499,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32.780077183391256, 32.79703824916922)"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "from scipy.stats import t, sem\n",
+    "sample = salaries[salaries[\"Salary or Hourly\"]==\"Hourly\"][\"Hourly Rate\"].dropna()\n",
+    "t.interval(0.05, len(sample)-1, loc=sample.mean(), scale=sem(sample))"
    ]
   },
   {
@@ -216,11 +529,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(86476.5176546444, 86496.31135162238)"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "sample2 = salaries[salaries[\"Department\"]==\"POLICE\"][\"Annual Salary\"].dropna()\n",
+    "t.interval(0.05, len(sample2)-1, loc=sample2.mean(), scale=sem(sample2))"
    ]
   },
   {
@@ -238,11 +565,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-3.5099964213703005, 0.0004481127249057967)"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here:\n",
+    "from statsmodels.stats.proportion import proportions_ztest\n",
+    "\n",
+    "proportions_ztest(len(salaries[salaries[\"Salary or Hourly\"]==\"Hourly\"]), \\\n",
+    "                  len(salaries), .25)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# probability is less than 0.05, so null hypothesis is rejected."
    ]
   }
  ],
